--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
                 </label>
                 <fieldset>
                     <legend>What would you like to see improved? <span>(Check all that apply)</span></legend>
-                    <label for="front-end-projects"><input type="checkbox" name="front-end-projects" id="front-end-projects">Front-end Projects</label>
-                    <label for="back-end-projects"><input type="checkbox" name="back-end-projects" id="back-end-projects">Back-end Projects</label>
-                    <label for="data-visualization"><input type="checkbox" name="data-visualization" id="data-visualization">Data Visualization</label>
-                    <label for="challenges"><input type="checkbox" name="challenges" id="challenges">Challenges</label>
-                    <label for="open-source-community"><input type="checkbox" name="open-source-community" id="open-source-community">Open Source Community</label>
-                    <label for="gitter-help-rooms"><input type="checkbox" name="gitter-help-rooms" id="gitter-help-rooms">Gitter help rooms</label>
-                    <label for="videos"><input type="checkbox" name="videos" id="videos">Videos</label>
-                    <label for="city-meetups"><input type="checkbox" name="city-meetups" id="city-meetups">City Meetups</label>
-                    <label for="wiki"><input type="checkbox" name="wiki" id="wiki">Wiki</label>
-                    <label for="forum"><input type="checkbox" name="forum" id="forum">Forum</label>
-                    <label for="additional-courses"><input type="checkbox" name="additional-courses" id="additional-courses">Additional Courses</label>
+                    <label for="front-end-projects"><input type="checkbox" value="front-end-projects" name="front-end-projects" id="front-end-projects">Front-end Projects</label>
+                    <label for="back-end-projects"><input type="checkbox" value="back-end-projects" name="back-end-projects" id="back-end-projects">Back-end Projects</label>
+                    <label for="data-visualization"><input type="checkbox" value="data-visualization" name="data-visualization" id="data-visualization">Data Visualization</label>
+                    <label for="challenges"><input type="checkbox" value="challenges" name="challenges" id="challenges">Challenges</label>
+                    <label for="open-source-community"><input type="checkbox" value="open-source-community" name="open-source-community" id="open-source-community">Open Source Community</label>
+                    <label for="gitter-help-rooms"><input type="checkbox" value="gitter-help-rooms" name="gitter-help-rooms" id="gitter-help-rooms">Gitter help rooms</label>
+                    <label for="videos"><input type="checkbox" value="videos" name="videos" id="videos">Videos</label>
+                    <label for="city-meetups"><input type="checkbox" value="city-meetups" name="city-meetups" id="city-meetups">City Meetups</label>
+                    <label for="wiki"><input type="checkbox" value="wiki" name="wiki" id="wiki">Wiki</label>
+                    <label for="forum"><input type="checkbox" value="forum" name="forum" id="forum">Forum</label>
+                    <label for="additional-courses"><input type="checkbox" value="additional-courses" name="additional-courses" id="additional-courses">Additional Courses</label>
                 </fieldset>
                 <label for="comments">Any comments or suggestions?<textarea name="comments" id="comments" cols="30" rows="10" placeholder="Any comment here!"></textarea></label>
                 <button type="submit">Submit</button>
